Spellcheck : Fix caching in cases where text is deleted.

This patch fixes spellcheck caching in the following case:
1. paragraph is edited by removing text from the back and
2. paragraph does not contain misspelled words.

Currently this case results in a cache miss and consequently
spellcheck requests being sent to the spellchecking service
while completely unnecessary. This fix applies to all
platforms.

This patch also adds a few unit tests for the relevant
caching specific behavior.

BUG=664247,629609

Review-Url: https://codereview.chromium.org/2494123002
Cr-Commit-Position: refs/heads/master@{#434710}

Former-commit-id: cb1e0169211135db1dd2e0220434bcec2efd7f16